# excel-mcp

./: .gitignore  CLAUDE.md  CLAUDE_SETUP.md  LICENSE  PRD.md  README.md  SUMMARY.md  TOOLS.md  pyproject.toml  smithery.yaml  verify_installation.py
.claude/: settings.local.json
.smithery/: test-config.json
src/excel_mcp_server/: __init__.py  __main__.py  models.py  server.py  server_smithery.py
src/excel_mcp_server/operations/: __init__.py  cell.py  formatting.py  sheet.py  workbook.py
src/excel_mcp_server/utils/: validators.py
tests/: __init__.py  conftest.py  test_cell.py  test_workbook.py
